Fix header navigation links alignment in small devices.

--- a/css/blog.scss
+++ b/css/blog.scss
@@ -51,12 +51,6 @@ $widget-alt-color : #EAF3F9;
     font-style:italic;
   }
   ul.meta-menu{
-    position:absolute;
-    top:50%;
-    right:0;
-    -webkit-transform:translateY(-50%);
-    -moz-transform:translateY(-50%);
-    transform:translateY(-50%);
     list-style: none;
     padding:0;
     margin:0;
@@ -357,13 +351,6 @@ $widget-alt-color : #EAF3F9;
 @media (max-width: 320px){
   .container{
     margin:0 -15px;
-  }
-  .main nav{
-    text-align: center;
-    ul.meta-menu{
-      position:relative;
-      margin-top: 2 * $pad;
-    }
   }
 
   .post{
